WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76314
HWndDC should be in platform/win instead of wtf.
https://bugs.webkit.org/show_bug.cgi?id=76314
Summary
HWndDC should be in platform/win instead of wtf.
David Levin
Reported
2012-01-13 15:10:16 PST
Per
https://bugs.webkit.org/show_bug.cgi?id=76235#c12
Attachments
Patch
(10.05 KB, patch)
2012-01-13 15:25 PST
,
David Levin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2012-01-13 15:25:05 PST
Created
attachment 122508
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-13 15:27:36 PST
Attachment 122508
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/WebCore/platform/win/HWndDC.h:39: Use the class HWndDC instead of calling GetDC to avoid potential memory leaks. [runtime/leaky_pattern] [5] Source/WebCore/platform/win/HWndDC.h:45: Use the class HWndDC instead of calling GetDCEx to avoid potential memory leaks. [runtime/leaky_pattern] [5] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Levin
Comment 3
2012-01-13 15:29:45 PST
(In reply to
comment #2
)
>
Attachment 122508
[details]
did not pass style-queue: > > Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 > > Source/WebCore/platform/win/HWndDC.h:39: Use the class HWndDC instead of calling GetDC to avoid potential memory leaks. [runtime/leaky_pattern] [5] > Source/WebCore/platform/win/HWndDC.h:45: Use the class HWndDC instead of calling GetDCEx to avoid potential memory leaks. [runtime/leaky_pattern] [5] > Total errors found: 2 in 7 files > > > If any of these errors are false positives, please file a bug against check-webkit-style.
Expected for this particular file.
WebKit Review Bot
Comment 4
2012-01-14 19:14:24 PST
Comment on
attachment 122508
[details]
Patch Clearing flags on attachment: 122508 Committed
r105028
: <
http://trac.webkit.org/changeset/105028
>
WebKit Review Bot
Comment 5
2012-01-14 19:14:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug