HWndDC should be in platform/win instead of wtf. https://bugs.webkit.org/show_bug.cgi?id=76314

Reviewed by Sam Weinig.

Source/JavaScriptCore:

* JavaScriptCore.gyp/JavaScriptCore.gyp:
* JavaScriptCore.gypi:

Source/WebCore:

No new functionality, so no new tests.

* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* platform/win/HWndDC.h: Renamed from Source/JavaScriptCore/wtf/win/HWndDCWin.h.
I also made the class non-copyable.
(WebCore::HWndDC::HWndDC):
(WebCore::HWndDC::~HWndDC):
(WebCore::HWndDC::operator HDC):

Source/WebKit/chromium:

* src/win/WebScreenInfoFactory.cpp:
(WebKit::WebScreenInfoFactory::screenInfo):


Canonical link: https://commits.webkit.org/93161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105028 268f45cc-cd09-0410-ab3c-d52691b4dbfc